--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,9 @@
     />
     <title>source</title>
   </head>
+  <style>
+    
+  </style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
