--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,8 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://at.alicdn.com/t/font_2159075_nioph9l787c.css><title>source</title><link href=./static/css/app.141be34d766620296252ecc6aef77e1c.css rel=stylesheet></head><style></style><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.42922f56d45925bdc5e8.js></script><script type=text/javascript src=./static/js/app.62aac4a17e80080a6789.js></script></body><script type=text/javascript src=cordova.js></script><script type=text/javascript></script></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://at.alicdn.com/t/font_2159075_nioph9l787c.css><title>source</title><link href=./static/css/app.eae040b3f937be6897838ca6a72d6a77.css rel=stylesheet></head><style></style><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.42922f56d45925bdc5e8.js></script><script type=text/javascript src=./static/js/app.0b20ae27d3c21022b260.js></script></body><script type=text/javascript src=cordova.js></script><script type=text/javascript></script><script type=text/javascript>document.addEventListener("plusready", onPlusReady, false);
+    // 扩展API加载完毕，现在可以正常调用扩展API
+    function onPlusReady() {
+      var cmr = plus.camera.getCamera();
+      alert(
+        "Camera supperted image resolutions: " + cmr.supportedImageResolutions
+      );
+    }</script></html>
