--- a/source/index.html
+++ b/source/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link
       rel="stylesheet"
-      href="https://at.alicdn.com/t/font_2159075_nioph9l787c.css"
+      href="https://at.alicdn.com/t/font_2159075_176l9rv56th.css"
     />
     <title>source</title>
   </head>
