--- a/source/index.html
+++ b/source/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
     <link
       rel="stylesheet"
-      href="https://at.alicdn.com/t/font_2159075_eogejynsqvd.css"
+      href="https://at.alicdn.com/t/font_2159075_r9n4kww5by.css"
     />
     <title>source</title>
   </head>
@@ -14,16 +17,14 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <script type="text/javascript" src="cordova.js"></script>
+  <!-- <script type="text/javascript" src="cordova.js"></script> -->
   <script type="text/javascript"></script>
   <script type="text/javascript">
     document.addEventListener("plusready", onPlusReady, false);
     // 扩展API加载完毕，现在可以正常调用扩展API
     function onPlusReady() {
       var cmr = plus.camera.getCamera();
-      alert(
-        "Camera supperted image resolutions: " + cmr.supportedImageResolutions
-      );
+      console.log(cmr.supportedImageResolutions);
     }
   </script>
 </html>
