--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link rel=stylesheet href=https://at.alicdn.com/t/font_2159075_eogejynsqvd.css><title>source</title><link href=./static/css/app.4437df54a3db7f3fdea014f02462ade9.css rel=stylesheet></head><style></style><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.d7715b5a2023ebe203ee.js></script><script type=text/javascript src=./static/js/app.6b0cfea2b3fef7d13374.js></script></body><script type=text/javascript src=cordova.js></script><script type=text/javascript></script><script type=text/javascript>document.addEventListener("plusready", onPlusReady, false);
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link rel=stylesheet href=https://at.alicdn.com/t/font_2159075_6kuy01hoihn.css><title>source</title><link href=./static/css/app.6b03e1c6f1f5306b297e52a64ece85e6.css rel=stylesheet></head><style></style><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.d7715b5a2023ebe203ee.js></script><script type=text/javascript src=./static/js/app.3e3db4a655e36cd9a218.js></script></body><script type=text/javascript></script><script type=text/javascript>document.addEventListener("plusready", onPlusReady, false);
     // 扩展API加载完毕，现在可以正常调用扩展API
     function onPlusReady() {
       var cmr = plus.camera.getCamera();
-      alert(
-        "Camera supperted image resolutions: " + cmr.supportedImageResolutions
-      );
+      console.log(cmr.supportedImageResolutions);
     }</script></html>
